# src/controllers/index.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Route } from 'tsoa';
+import { Controller, Get, Post, Route } from 'tsoa';
 
 @Route('')
 export class IndexController extends Controller {
@@ -9,6 +9,11 @@ export class IndexController extends Controller {
 
     @Get('/msg')
     msg() {
+        return { msg: 'This is a message' };
+    }
+
+    @Post('/newUSer')
+    async newUSer() {
         return { msg: 'This is a message' };
     }
 }
